tests/reference/llvm-global_scope7-69a167f.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/global_scope7.f90:2:1
  |
2 | 2*x
  | ^^^ 
